src/test/deca/context/invalid/initialization/assiging-string-to-int.deca
// Description:
//    Programme minimaliste affectant un string à un int.
//
// Resultats:
//    error : types incompatibles
//
// Historique:
//    cree le 01/01/2025

{
    int a = "la vie de ma mère, je suis un int";
}